--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
     "cors": "^2.8.5",
+    "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.0",
     "nodemon": "^3.1.11"
@@ -14,7 +15,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start" : "node src/server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
